--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 :root {
+    --font-size: 16px;
     --bg-color: #E7FAFE;
+    --btn-bg: rgba(0, 0, 0, 0.05);
+    --bg-gradient: linear-gradient(180deg, rgba(231, 249, 253, 0) 0%, #E7F9FD 100%);
 }
 body {
     margin: 0;
@@ -19,7 +22,7 @@ body {
     font-size: 64px;
 }
 .header-btn {
-    background-color: rgba(0, 0, 0, 0.05);
+    background: var(--btn-bg);
 }
 .top-right-badge {
     margin-left: -58px;
@@ -47,4 +50,18 @@ body {
 }
 .chocholate {
     background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.05) 100%);
+}
+.recipe-text {
+    color: rgba(0, 0, 0, 0.6);
+    font-size: var(--font-size);
+}
+.gradient-bg {
+    background: var(--bg-gradient);
+    position: relative;
+}
+.react-icon {
+    position: absolute;
+    top: 50px;
+    right: 40px;
+    z-index: 1;
 }
