paragraph color of blog sections has updated

--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
 :root {
     --text-color: rgba(0, 0, 0, 0.6);
     --font-size: 16px;
+    --title-font-size: 48px;
     --bg-color: #E7FAFE;
     --btn-bg: rgba(0, 0, 0, 0.05);
+    --instagram-post-color: #262626;
     --bg-gradient: linear-gradient(180deg, rgba(231, 249, 253, 0) 0%, #E7F9FD 100%);
+
 }
 body {
     margin: 0;
@@ -52,7 +55,10 @@ body {
 .chocholate {
     background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.05) 100%);
 }
-.recipe-text {
+.section-title {
+    font-size: var(--title-font-size);
+}
+.custom-text {
     color: rgba(0, 0, 0, 0.6);
     font-size: var(--font-size);
 }
@@ -86,4 +92,7 @@ body {
 }
 .slide-indicator > i {
     font-size: 9px;
+}
+.card-body > p {
+    color: var(--instagram-post-color);
 }
