copyrights credit has added

--- a/style.css
+++ b/style.css
@@ -117,3 +117,8 @@ body {
     bottom: 74px;
     right: -295px;
 }
+
+/* ******************Copyrights Credit***************** */
+.copyright-credit {
+    color: #FF7967;
+}
